css/main.css
/* ... */
body {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
    -webkit-font-smoothing: antialiased;
}

article {
    width:960px;
    display:block;
    margin-left:auto;
    margin-right:auto;
}

section {
    position:fixed;
    width:100%;
    overflow:hidden;
}

.story-text {
    left: 50%;
    width: 400px;
    margin-left: -200px;    
    display: block;
    position: absolute;
    font-family: "Palatino Linotype","Palatino",serif;
    font-size: 30px;
    text-align: center;
    height: 0;
}


#header-bar {
    position: fixed;
    top: 0;
    height: 40px;
    overflow: hidden;
    width: 100%;
    background-color: #126671;
    z-index:100;
}

#intro {
    background-color:#126671;
}
#intro h1 {
    margin-top:0;
    text-align:left;
    width:300px;
    margin-left: auto;
    margin-right: auto;
    position:relative;
    padding-top: 10px;
    margin-bottom: 80px;
}
#intro h1 span {
    display:block;
    text-transform:lowercase;
    color:white;
    font-weight: normal;
}
#intro #title-year {
    font-size: 80px;
    position: relative;
    left: -37px;
}
#intro #title-inthe {
    opacity: 0.6;
    font-size: 45px;
    position: relative;
    top: -30px;
}
#intro #title-life {
    font-weight: bold;
    font-size: 195px;
    line-height: 10px;
    position: relative;
    top: 34px;
    float: left;
}
#intro #title-atucla {
    opacity: 0.4;
    font-size: 25px;
    position: relative;
    left: 291px;
    top: 64px;
    text-transform: none;
}
#intro h2 {
    text-align: center;
    color: white;
    padding-top: 59px;
    display: block;
    font-weight: normal;
}

#intro #info-form {
    width: 300px;
    margin-left: auto;
    margin-right: auto;
}
#intro #info-form [type=text] {
    display: block;
    width: 100%;
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #0d5058;
    margin-bottom: 10px;
    margin-top: 10px;
    padding-left: 10px;
    font-family: "Palatino Linotype","Palatino",serif;
    color: white;
    outline: none;
    font-size: 26px;
    font-style: italic;
}

#intro #info-form select {
    -webkit-appearance: none;
    border: none;
    font-family: "Palatino Linotype","Palatino",serif;
    border-bottom: 1px solid #0d5058;
    background-color: transparent;
    border-radius: 0;
    color: white;
    width: 50%;
    font-size: 26px; font-style: italic;
    padding-left: 10px;
    outline:none;
}
#intro #privacy-disclaimer {
    position: absolute;
    width: 300px;
    text-align: right;
    font-family: "Palatino Linotype","Palatino", serif;
    color: #333;
    font-size: 15px;
    line-height: 18px;
    margin-top: 16px;
}
#intro #start-arrow {
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 34px;
    position: absolute;
    left: 48%;
}
#intro label {
    color: white;
}

#welcome-letter {
    background-color:#eee;
    z-index:100;
}


#welcome-letter article {
    background-image: url('../img/letter-back.png');
    background-repeat: no-repeat;
    background-position: center center;
    position:relative;
    bottom:-200px;
}
#welcome-letter #letter-front {
    display:block;
    margin-left:auto;
    margin-right: auto;
    position:relative;
    z-index:1;
}

#welcome-letter #letter-body {
    position: absolute;
    /*top: -15px;*/
    top:400px;
    left: 24%;
    background-color: white;
    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
    width: 500px;
    padding: 10px;
    z-index: 0;
    height: 500px;
}

#welcome-letter #letter-body p {
    padding: 10px;
    font-size: 20px;
    padding-left: 30px;
    padding-right: 30px;
    font-family: "Palatino Linotype","Palatino",serif;
}

#welcome-letter .user-applicant-number {
    font-weight:bold;
}
#welcome-letter .story-text {
        top: -140px;
}

#orientation-myths {
    width:100%;
    overflow:hidden;
    z-index:100;
}
#orientation-myths img {
    width:100%;
}
.story-text.story-text-white {
    text-shadow: 1px 1px 1px rgba(0,0,0,0.7);
    font-weight: bold;
    color:white;
}

#dormroom {
    z-index:100;
}

#dormroom img {
    width:100%;
    max-width:2000px;
}
#dormroom #dorm-boxes {
    position:absolute;
}

#dormroom #dorm-bubble1 {
    background-image: url('../img/dorm-bubble1.png');
    width:226px;
    height:153px;
    position: absolute;
    z-index:100;
    background-size: 226px 153px;
    background-repeat: no-repeat;
    text-align: center;
    font-weight: bold;
    padding-top: 44px;
    font-size: 20px;
    padding-left: 12px;
    left: 38%;
    top: -24%;
}
/* ... */

